# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This file contains build rules for the main binary of p4_symbolic.

# load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
# load("@rules_cc//cc:cc_library.bzl", "cc_library")
# load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_binary(
    name = "main",
    srcs = [
        "main.cc",
    ],
    deps = [
        ":test_util",
        "@gutil//gutil:ordered_map",
        "//p4_symbolic/symbolic",
        "//p4_symbolic/symbolic:solver_state",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/flags:usage",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings:str_format",
        "@gutil//gutil:io",
        "@protobuf//:protobuf",
    ],
)

cc_library(
    name = "z3_util",
    srcs = ["z3_util.cc"],
    hdrs = ["z3_util.h"],
    deps = [
        "@p4_infra//string_encodings:bit_string",
        "@p4_infra//string_encodings:hex_string",
        "@z3//:z3_static",
        "@boost.multiprecision",
        "@abseil-cpp//absl/numeric:int128",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/types:optional",
        "@gutil//gutil:status",
    ],
)

cc_library(
    name = "test_util",
    testonly = False,
    srcs = ["test_util.cc"],
    hdrs = ["test_util.h"],
    deps = [
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@gutil//gutil:io",
        "@gutil//gutil:proto",
    ],
)

cc_test(
    name = "z3_util_test",
    srcs = ["z3_util_test.cc"],
    deps = [
        ":z3_util",
        "@p4_infra//string_encodings:bit_string",
        "@z3//:z3_static",
        "@abseil-cpp//absl/numeric:int128",
        "@abseil-cpp//absl/status",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
    ],
)
