load("@com_google_googleapis_imports//:imports.bzl", "cc_proto_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

proto_library(
    name = "capabilities_proto",
    srcs = ["capabilities.proto"],
)

cc_proto_library(
    name = "capabilities_cc_proto",
    deps = [":capabilities_proto"],
)

cc_library(
    name = "capabilities",
    srcs = ["capabilities.cc"],
    hdrs = ["capabilities.h"],
    deps = [
        ":capabilities_cc_proto",
	"//gutil/gutil:status",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_test(
    name = "capabilities_test",
    srcs = ["capabilities_test.cc"],
    deps = [
        ":capabilities",
        ":capabilities_cc_proto",
	"//gutil/gutil:proto_matchers",
	"//gutil/gutil:status_matchers",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

