load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
# load("@rules_cc//cc:cc_library.bzl", "cc_library")
# load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

# All SAI P4 source files. References sub-packages since Bazel globs
# don't cross package boundaries.
filegroup(
    name = "sai_p4_srcs",
    srcs = [
        "//sai_p4/fixed",
        "//sai_p4/instantiations/google:p4_srcs",
    ],
)

proto_library(
    name = "capabilities_proto",
    srcs = ["capabilities.proto"],
)

cc_proto_library(
    name = "capabilities_cc_proto",
    deps = [":capabilities_proto"],
)

cc_library(
    name = "capabilities",
    srcs = ["capabilities.cc"],
    hdrs = ["capabilities.h"],
    deps = [
        ":capabilities_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/status",
        "@gutil//gutil:status",
        "@protobuf//:protobuf",
    ],
)

cc_test(
    name = "capabilities_test",
    srcs = ["capabilities_test.cc"],
    deps = [
        ":capabilities",
        ":capabilities_cc_proto",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto_matchers",
        "@gutil//gutil:status_matchers",
    ],
)
