# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# PINS test functions that can be run on any infrastructure that supports ThinKit.

# load("@rules_cc//cc:cc_library.bzl", "cc_library")
# load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "thinkit_sanity_tests",
    testonly = 1,
    srcs = [
        "thinkit_sanity_tests.cc",
    ],
    hdrs = [
        "thinkit_sanity_tests.h",
        "thinkit_util.h",
    ],
    deps = [
        "//lib/gnmi:gnmi_helper",
        "//lib/utils:constants",
        "//lib/validator:validator_lib",
        "//p4_infra/p4_runtime:p4_runtime_session",
        "//thinkit:mirror_testbed",
        "//thinkit:ssh_client",
        "//thinkit:switch",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_proto",
        "@openconfig_gnoi//system:system_cc_grpc_proto",
        "@openconfig_gnoi//system:system_cc_proto",
        "@grpc//:grpc++",
        "@nlohmann_json//:json",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@googletest//:gtest",
        "@gutil//gutil:status",
        "@gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "thinkit_gnmi_interface_util",
    testonly = 1,
    srcs = ["thinkit_gnmi_interface_util.cc"],
    hdrs = ["thinkit_gnmi_interface_util.h"],
    deps = [
        ":thinkit_gnmi_subscribe_tests",
        "//lib/gnmi:gnmi_helper",
        "@p4_infra//p4_pdpi:pd",
        "//sai_p4/instantiations/google:sai_pd_cc_proto",
        "//thinkit:ssh_client",
        "//thinkit:switch",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@nlohmann_json//:json",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@googletest//:gtest",
        "@gutil//gutil:status",
        "@gutil//gutil:testing",
        "@re2//:re2",
    ],
)

cc_library(
    name = "thinkit_gnmi_tests",
    testonly = 1,
    srcs = [
        "thinkit_gnmi_interface_tests.cc",
    ],
    hdrs = [
        "thinkit_gnmi_interface_tests.h",
        "thinkit_util.h",
    ],
    deps = [
        ":thinkit_gnmi_interface_util",
        "//lib/gnmi:gnmi_helper",
        "@p4_infra//p4_pdpi:pd",
        "//sai_p4/instantiations/google:instantiations",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "//sai_p4/instantiations/google:sai_pd_cc_proto",
        "//thinkit:ssh_client",
        "//thinkit:switch",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@nlohmann_json//:json",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@googletest//:gtest",
        "@gutil//gutil:collections",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
    ],
)

cc_library(
    name = "thinkit_gnmi_subscribe_tests",
    testonly = 1,
    srcs = [
        "thinkit_gnmi_subscribe_tests.cc",
    ],
    hdrs = [
        "thinkit_gnmi_subscribe_tests.h",
        "thinkit_util.h",
    ],
    deps = [
        "//lib/gnmi:gnmi_helper",
        "//p4_infra/p4_runtime:p4_runtime_session",
        "//thinkit:ssh_client",
        "//thinkit:switch",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_proto",
        "@nlohmann_json//:json",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@googletest//:gtest",
        "@gutil//gutil:status_matchers",
    ],
)

cc_test(
    name = "thinkit_gnmi_interface_util_tests",
    srcs = ["thinkit_gnmi_interface_util_tests.cc"],
    deps = [
        ":thinkit_gnmi_interface_util",
        ":thinkit_gnmi_tests",
        "//lib/gnmi:gnmi_helper",
        "//thinkit:mock_ssh_client",
        "//thinkit:mock_switch",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_proto",
        "@nlohmann_json//:json",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto_matchers",
        "@gutil//gutil:status",
        "@gutil//gutil:status_matchers",
        "@protobuf//:protobuf",
    ],
)
